Correctly update notification delegate for Chrome OS mojo notifications.

When a notification was updated (same ID, new properties), the
appearance --- title, image, etc. --- was updated, but the old delegate
wasn't replaced with the new delegate. Fix that and add a test.

Bug: 840105
Change-Id: I83fd7453f13c41adf96a417e3945a85933a9e1a3
Reviewed-on: https://chromium-review.googlesource.com/1056091
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Evan Stade <estade@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558315}
Former-commit-id: 070b773c468f3aeed645334f53850175512e8b08